<resources>
    <string name="app_name">RealTime DataBase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_logintitle">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Bienvenido</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="CURRENT_USER_KEY_STORE">CURRENT_USER</string>
    <string name="descr">TODO</string>
    <string name="sign_in_to_continue">Inicie session para continuar</string>
    <string name="sign_in">INICIAR SESSION</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user">REGISTRAR USUARIO</string>
    <string name="new_bussines">REGISTRAR EMPRESA</string>
    <string name="title_activity_register_user">RegisterUserActivity</string>
    <string name="prompt_emailuserbussiness">Email del propietario</string>
    <string name="prompt_namebussines">Nombre de la empresa</string>
    <string name="prompt_city">Ciudad</string>
    <string name="prompt_ruc">RUC de la empresa</string>
    <string name="prompt_addressbussines">Dirección de la empresa</string>
    <string name="datos_bussines">Ingrese los datos de la empresa</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="ingrese_sus_datos_de_registro">Ingrese sus datos de registro</string>
    <string name="registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Telefono</string>

    <!--
  Registrar artesanias
   -->
    <string name="registrarart">Registrar Artesanía</string>
    <string name="Ingresedatos">Ingrese datos de la artesanía</string>
    <string name="nombreart">Nombre</string>
    <string name="categoriaart">Categoría</string>
    <string name="cantart">Cantidad Actual</string>
    <string name="precioart">Precio</string>
    <string name="descriptioncrafs">Descripción de la artesanía</string>
    <string name="seleccimg">Selecciona Imagen</string>

</resources>