<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/reldata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/fondo2">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/new_bussines"
                    android:textAlignment="center"
                    android:textColor="#525966"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="88dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:layout_centerInParent="true"
                    android:text="@string/datos_bussines"
                    android:textColor="#525966"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mainnamebussines"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView2"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/prompt_namebussines"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/namebussines"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border3"
                        android:drawableStart="@drawable/icon_bussiness"
                        android:drawablePadding="10dp"
                        android:drawableTint="#0669b2"
                        android:inputType="text"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mainruc"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mainnamebussines"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/prompt_ruc"
                    android:imeActionLabel="@string/action_sign_in_short"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ruc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border3"
                        android:drawableStart="@drawable/icon_ruc"
                        android:drawablePadding="10dp"
                        android:drawableTint="#0669b2"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/maincity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mainruc"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/prompt_city"
                    android:imeActionLabel="@string/action_sign_in_short"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border3"
                        android:drawableStart="@drawable/icon_city"
                        android:drawablePadding="10dp"
                        android:drawableTint="#0669b2"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mainaddress"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/maincity"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/prompt_addressbussines"
                    android:imeActionLabel="@string/action_sign_in_short"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border3"
                        android:drawableStart="@drawable/icon_address"
                        android:drawablePadding="10dp"
                        android:drawableTint="#0669b2"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/registrar_company"
                    android:layout_width="243dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mainaddress"
                    android:layout_centerInParent="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#0669b2"
                    android:onClick="writeBussiness"
                    android:text="@string/registrar"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


                <!--<Button
                    android:id="@+id/cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/mainaddress"
                    android:layout_centerInParent="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="90dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#0669b2"
                    android:enabled="false"
                    android:text="@string/cancelar"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>-->

                <ListView
                    android:id="@+id/listbussiness"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_below="@+id/registrar_company" />

            </RelativeLayout>



        </LinearLayout>

    </ScrollView>

</RelativeLayout>